--- a/paginas/Componentes.html
+++ b/paginas/Componentes.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>componentes</title>
 </head>
 <body>
@@ -33,19 +33,19 @@
                 </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
+                    <li class="nav-item items">
                         <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                       </li>
-                  <li class="nav-item">
+                  <li class="nav-item items">
                     <a class="nav-link active" aria-current="page" href="novedades.html">Noticias</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item items">
                     <a class="nav-link active" aria-current="page" href="Componentes.html">Componentes</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item items">
                     <a class="nav-link active" aria-current="page" href="quienessomos.html">Sobre Nosotros</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item items">
                     <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
                   </li>
                   
@@ -95,7 +95,7 @@
             <div class="mx-3 bg-white">
                 
                 <!-- aplico bootstrap aqui -->
-                <table class="tablita table table-striped border border-2">
+                <table class="table table-striped border border-2">
                     <th>Componente</th>
                     <th>Precio aprox~</th>
                     <th>Descripcion</th>
