Agregando SEO y Mixin/extend

--- a/paginas/novedades.html
+++ b/paginas/novedades.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="pc build, armar pc, computadora, pc, cpu, componentes de pc, informatica, aprender, rapido aprendizaje, tutorial pc">
+    <meta name="description" content="Novedades, actualizaciones y noticias sobre lo mas importante en una pc">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <title>novedades</title>
+    <title>Novedades-Armado-PC</title>
 </head>
 <body>
   
@@ -65,6 +67,7 @@
     <main>
         <section class="video ">
             <h2>Explicacion Rapida:</h2>
+            <p>Aqui un video corto de como funciona una pc!</p>
             <iframe class="videos" width="800" height="500" src="https://www.youtube.com/embed/VhCaTS7jhAM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             
         </section>
