--- a/paginas/quienessomos.html
+++ b/paginas/quienessomos.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="pc build, armar pc, computadora, pc, cpu, componentes de pc, informatica, aprender, sobre nosotros, informacion para el usuario">
+    <meta name="description" content="Quienes somos, informacion para el usuario">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <title>quienes</title>
+    <title>Nosotros-Armado-PC</title>
 </head>
 <body>
 
@@ -68,7 +70,7 @@
             <div >
                 <h3>¿Quienes somos?</h3>
                
-                <p> Somos una empresa que se dedica a informar... Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et aspernatur sint tempore, numquam maiores at delectus quod. Quaerat obcaecati laborum exercitationem corporis in qui totam, mollitia velit fugit, vero recusandae?</p>
+                <p class="parrafoNos"> Somos una empresa que se dedica a informar... Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et aspernatur sint tempore, numquam maiores at delectus quod. Quaerat obcaecati laborum exercitationem corporis in qui totam, mollitia velit fugit, vero recusandae?</p>
 
             </div>
            
