--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <p class="pSelect"></p>
 
         <form id="formulario">
-          <input type="number" name="" max="9" min="1" id="numeroEntrada" >
+          <input type="number" min="1" max="9"  id="numeroEntrada">
           <br>
           <input type="submit" class="mt-2"  value="Agregar" id="btnAgregar">
       
