--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         </form>
         
         <input type="button" class="mt-2 mb-3" id="termina" value="Comprar/Terminar">
+        <input type="button" class="mt-2 mb-3" id="btnBorrarCarrito" value="Borrar Carrito">
         <p id="txtmemoria"></p>
         <p id="txtcarrito"></p>
       </div>
