--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
         <div class="d-flex gap-1 border p-2 m-1">
           <p id="txtmemoria"></p>
           <div class=" ">
+            <button class="btn btn-primary " id="btnVerCarrito">Ver Carrito</button>
+
+          </div>
+          <div class=" ">
             <button class="btn btn-danger " id="btnBorrarCarrito">Borrar Carrito</button>
 
           </div>
